--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Package: cryptor
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Thibaut Van Weehaeghe
+Maintainer: Thibaut Van Weehaeghe <thibaut.vanweehaeghe@gmail.com>
+Description: Library to research and maintain crypto portfolios
+    Additional descriptions...
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
