--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1.0
 Author: Thibaut Van Weehaeghe
 Maintainer: Thibaut Van Weehaeghe <thibaut.vanweehaeghe@gmail.com>
 Description: Library to research and maintain crypto portfolios
-    Additional descriptions...
-License: What license is it under?
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
