--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,5 @@
 Package: cryptor
-Type: Package
-Title: What the Package Does (Title Case)
+Title: Utility for Crypto research and portfolio maintenance
 Version: 0.1.0
 Author: Thibaut Van Weehaeghe
 Maintainer: Thibaut Van Weehaeghe <thibaut.vanweehaeghe@gmail.com>
@@ -11,4 +10,5 @@ LazyData: true
 RoxygenNote: 6.0.1
 Imports:
   Rbitcoin,
-  tidyverse
+  tidyverse,
+  assertthat
