--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  Rbitcoin,
-  tidyverse,
+  dplyr,
+  magrittr,
+  httr,
+  digest,
   assertthat
