--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(binance_klines)
 export(binance_mytrades)
 export(binance_symbols)
 export(binance_ticker_all_prices)
+export(cmc_top_n)
 export(credentials_binance)
 export(credentials_kraken)
 export(credentials_nomics)
