Added Nomics API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(credentials_kraken)
 export(credentials_nomics)
 export(data_long_to_wide)
 export(data_wide_to_long)
+export(from_rfc3339)
 export(index_series)
 export(kraken_add_order)
 export(kraken_allocation_current)
@@ -24,20 +25,44 @@ export(kraken_cancel_open_order)
 export(kraken_cancel_open_orders)
 export(kraken_candles)
 export(kraken_get_closed_orders)
+export(kraken_get_deposit_address)
+export(kraken_get_deposit_methods)
 export(kraken_get_open_orders)
+export(kraken_get_withdrawal_info)
 export(kraken_lastprice)
 export(kraken_ledger)
-export(kraken_ohlc)
-export(kraken_ohlc_simple)
 export(kraken_orderbook)
 export(kraken_query_orders_info)
 export(kraken_rebalance_portfolio)
 export(kraken_servertime)
 export(kraken_spread)
+export(kraken_withdraw_funds)
+export(nomics_candles)
+export(nomics_candles_aggregated)
+export(nomics_currencies)
+export(nomics_currencies_interval)
+export(nomics_currencies_sparkline)
+export(nomics_exchange_market_interval)
+export(nomics_exchange_market_prices)
+export(nomics_exchange_rates)
+export(nomics_exchange_rates_history)
+export(nomics_exchange_rates_interval)
+export(nomics_global_volume)
+export(nomics_market_interval)
+export(nomics_market_prices)
+export(nomics_markets)
+export(nomics_mcap_hist)
+export(nomics_prices)
+export(nomics_supplies_interval)
 export(query_kraken)
+export(to_rfc3339)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(digest,hmac)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
+importFrom(lubridate,as_datetime)
 importFrom(magrittr,"%>%")
