Cleanup of dependencies and imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,13 +56,22 @@ export(nomics_prices)
 export(nomics_supplies_interval)
 export(query_kraken)
 export(to_rfc3339)
+importFrom(base64enc,base64decode)
+importFrom(base64enc,base64encode)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
+importFrom(digest,digest)
 importFrom(digest,hmac)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
+importFrom(httr,add_headers)
+importFrom(jsonlite,fromJSON)
 importFrom(lubridate,as_datetime)
 importFrom(magrittr,"%>%")
+importFrom(plyr,llply)
+importFrom(tidyr,fill)
+importFrom(tidyr,gather)
+importFrom(utils,modifyList)
