--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,24 @@
 Package: cryptor
-Title: Utility for Crypto research and portfolio maintenance
-Version: 0.1.0
+Title: Utility for Crypto research
+Version: 0.9
 Author: Thibaut Van Weehaeghe
 Maintainer: Thibaut Van Weehaeghe <thibaut.vanweehaeghe@gmail.com>
-Description: Library to research and maintain crypto portfolios
+Description: This package is a function library to research crypto data.
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Depends: 
+  R (>= 3.4.4)
 Imports:
-  dplyr,
-  magrittr,
-  httr,
-  digest,
-  assertthat
+  dplyr (>= 0.7.5),
+  tidyr (>= 0.8.1),
+  plyr (>= 1.8.4),
+  magrittr (>= 1.5),
+  httr (>= 1.3.1),
+  jsonlite (>= 1.5),
+  digest (>= 0.6.15),
+  base64enc (>= 0.1-3),
+  assertthat (>= 0.2.0.9000),
+  lubridate (>= 1.7.4),
+  data.table (>= 1.11.4)
