--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
   assertthat (>= 0.2.0.9000),
   lubridate (>= 1.7.4),
   data.table (>= 1.11.4)
-Suggests: knitr,
-    rmarkdown
+Suggests: 
+  knitr,
+  rmarkdown
 VignetteBuilder: knitr
