Update to market cap functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,10 @@ export(nomics_interval_currencies)
 export(nomics_interval_exchange_markets)
 export(nomics_interval_exchange_rates)
 export(nomics_interval_markets)
+export(nomics_interval_mcap_aggr)
+export(nomics_interval_mcap_indiv)
 export(nomics_interval_supplies)
 export(nomics_markets)
-export(nomics_mcap_hist_aggr)
-export(nomics_mcap_hist_indiv)
 export(nomics_mcap_indiv)
 export(nomics_prices)
 export(nomics_prices_exchange_markets)
